src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_color_charts_fill")]
        internal static extern int MccCheckerGetColorChartsFill(IntPtr checker, Point2fNative* points, int pointCapacity, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_charts_rgb")]
        internal static extern int MccCheckerGetChartsRgb(IntPtr checker, int getStats, out IntPtr chartsRgb);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_charts_rgb")]
        internal static extern int MccCheckerSetChartsRgb(IntPtr checker, IntPtr chartsRgb);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_charts_ycbcr")]
        internal static extern int MccCheckerGetChartsYCbCr(IntPtr checker, out IntPtr chartsYCbCr);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_charts_ycbcr")]
        internal static extern int MccCheckerSetChartsYCbCr(IntPtr checker, IntPtr chartsYCbCr);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_cost")]
        internal static extern int MccCheckerGetCost(IntPtr checker, out float cost);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_cost")]
        internal static extern int MccCheckerSetCost(IntPtr checker, float cost);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_center")]
        internal static extern int MccCheckerGetCenter(IntPtr checker, out Point2fNative center);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_center")]
        internal static extern int MccCheckerSetCenter(IntPtr checker, Point2fNative center);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_create")]
        internal static extern int MccCheckerDetectorCreate(out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_release_handle")]
        internal static extern void MccCheckerDetectorReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_process")]
        internal static extern int MccCheckerDetectorProcess(IntPtr detector, IntPtr image, int nc, out int detected);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_process_with_roi")]
        internal static extern int MccCheckerDetectorProcessWithRoi(IntPtr detector, IntPtr image, int[] rois, int roiCount, int nc, out int detected);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_process_with_roi")]
        internal static extern int MccCheckerDetectorProcessWithRoi(IntPtr detector, IntPtr image, int* rois, int roiCount, int nc, out int detected);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_best_color_checker")]
        internal static extern int MccCheckerDetectorGetBestColorChecker(IntPtr detector, out IntPtr checker, out int hasChecker);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_list_color_checker_count")]
        internal static extern int MccCheckerDetectorGetListColorCheckerCount(IntPtr detector, out int checkerCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_list_color_checker_fill")]
        internal static extern int MccCheckerDetectorGetListColorCheckerFill(IntPtr detector, IntPtr[] checkers, int checkerCapacity, out int checkerCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_draw")]
        internal static extern int MccCheckerDetectorDraw(IntPtr detector, IntPtr[] checkers, int checkerCount, IntPtr image, double colorV0, double colorV1, double colorV2, double colorV3, int thickness);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_ref_colors")]
        internal static extern int MccCheckerDetectorGetRefColors(IntPtr detector, out IntPtr refColors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_detection_params")]
        internal static extern int MccCheckerDetectorGetDetectionParams(IntPtr detector, out MccDetectorParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_set_detection_params")]
        internal static extern int MccCheckerDetectorSetDetectionParams(IntPtr detector, ref MccDetectorParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_color_chart_type")]
        internal static extern int MccCheckerDetectorGetColorChartType(IntPtr detector, out int chartType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_set_color_chart_type")]
        internal static extern int MccCheckerDetectorSetColorChartType(IntPtr detector, int chartType);
    }
}
#endif
